@@ -1,3 +1,7 @@
+rev 476 (2017-11-02) (krueschan)
+- added URL parameter 'dl_wide' to tsv download (download_tabsep.php). If dl_wide=1, the download omits the info and settings table at the top but
+  adds settings, calc_version and db_version to each data entry (the idea is to enable more straightforward parsing into statistics software)
+
 rev 475 (2017-07-18) (krueschan)
 - added logging of calculator settings to ../sessions/param_log.txt file on each call of the calculator engine
 
